<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:clickable="true"
        android:elevation="4dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/AppTheme">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:text="Profiles"
            android:textColor="@color/toolbarColor"
            android:textSize="@dimen/toolbar_title_size" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/form_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/title_filed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Title"
            android:textColorHint="@android:color/white"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/title_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="@dimen/switch_text_size" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/song_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onSongSwitchClick"
            android:paddingTop="@dimen/switch_vertical_padding"
            android:paddingBottom="@dimen/switch_vertical_padding"
            android:text="Sound"
            android:textColor="@android:color/white"
            android:textSize="@dimen/switch_text_size"
            app:layout_constraintTop_toBottomOf="@id/title_filed" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/dice_sum_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onDiceSumSwitchClick"
            android:paddingTop="@dimen/switch_vertical_padding"
            android:paddingBottom="@dimen/switch_vertical_padding"
            android:text="Show alpha numeric sum"
            android:textColor="@android:color/white"
            android:textSize="@dimen/switch_text_size"
            app:layout_constraintTop_toBottomOf="@id/song_switch" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/number_of_dice_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:layout_constraintTop_toBottomOf="@id/dice_sum_switch">

            <TextView
                android:id="@+id/number_of_dice_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:alpha="1"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="Number of dices"
                android:textColor="@android:color/white"
                android:textSize="@dimen/switch_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <NumberPicker
                android:id="@+id/dice_number_picker"
                android:layout_width="80dp"
                android:layout_height="130dp"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:theme="@android:style/Theme.Material"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/description_enable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onDescriptionSwitchClick"
            android:paddingTop="@dimen/switch_vertical_padding"
            android:paddingBottom="@dimen/switch_vertical_padding"
            android:text="Show dice description"
            android:textColor="@android:color/white"
            android:textSize="@dimen/switch_text_size"
            app:layout_constraintTop_toBottomOf="@id/number_of_dice_layout" />

        <NumberPicker
            android:id="@+id/description_dice_value"
            android:layout_width="80dp"
            android:layout_height="130dp"
            android:theme="@android:style/Theme.Material"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description_enable" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/description_recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fadingEdgeLength="10dp"
            android:nestedScrollingEnabled="false"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:requiresFadingEdge="vertical"
            app:layout_constraintBottom_toBottomOf="@id/description_dice_value"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/description_dice_value"
            app:layout_constraintTop_toTopOf="@id/description_dice_value"
            tools:listitem="@layout/item_dice_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>